test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 30 Mar 2026 10:26:21 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="TzcaeHH/i6RwjPYAMy7mwEmp+tzKIM1t", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}